--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,9 @@ h1 {
     font-size: 3em;
     font-weight: 400;
 }
+h1 a {
+    color: #000;
+}
 span, a {
     color: #3366ff;
     text-decoration: none;
